modificando segun lighthouse

--- a/assets/pages/portfolio.html
+++ b/assets/pages/portfolio.html
@@ -47,7 +47,7 @@
 
     <div class="portfolio__container container">
         <div class="galeía__item">
-            <img clas="galería__img" src="../images/agregar fotos en porfolio.png" alt="" width="300px">
+            <img clas="galería__img" src="../images/elmanzanar.webp" alt="" width="300px">
             <h3 class="galería__título"></h3>
         </div>
         <div class="galería__item">
@@ -55,7 +55,7 @@
             <h3 class="galería__título"></h3>
         </div>
         <div class="galería__item">
-            <img clas="galería__img" src="../images/agregar fotos en porfolio.png" alt="" width="300px">
+            <img clas="galería__img" src="../images/puente.webp" alt="" width="300px">
             <h3 class="galería__título"></h3>
         </div>
         <div class="galería__item">
