--- a/assets/pages/sobremi.html
+++ b/assets/pages/sobremi.html
@@ -48,7 +48,7 @@
     </div>
     <div class="container">
         <picture class="foto__sección container">
-            <img class="foto__sección__sobremí container" src="../images/sebaseccionsobremi.jpg" alt="Foto de Seba Pedranti" width="1500px">
+            <img class="foto__sección__sobremí container" src="../images/sebaseccionsobremi.webp" alt="Foto de Seba Pedranti" width="1500px" height="1500px">
         </picture>      
     </div>  
 
