--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="container__header container">
         <div class="container__header--index container">
             <picture class="container__header--img">
-                <img class="container_header--img" src="./assets/images/Diseño sin título.svg" alt="logo" width="100px">
+                <img class="container_header--img" src="./assets/images/Diseño sin título.webp" alt="logo" width="100px" height="100px">
             </picture>
             <h1 class="container__header--título" >Sebastián Pedranti<span class="container__header--título--span" >Drone Pilot</span></h1clas>
         </div>
@@ -43,7 +43,7 @@
     </header>
     <div class="container">
         <picture class="container">
-            <img class="picture__index container" src="./assets/images/droneinicio.png" alt="Drone de inicio" width="100%" >
+            <img class="picture__index container" src="./assets/images/droneinicio.webp" alt="Drone de inicio" width="100%" >
         </picture>                                                                                
     </div>  
 
