--- a/assets/pages/servicios.html
+++ b/assets/pages/servicios.html
@@ -49,7 +49,7 @@
             <h2>Fotografías</h2>
         </div>
         <div class="foto flex-wrap">
-            <img class="img-sec img-fluid mi-clase" src="../images/puente.jpg" alt="puenteroca" width="100%" height="auto">
+            <img class="img-sec img-fluid mi-clase" src="../images/puente.webp" alt="puenteroca" width="100%" height="auto">
         </div>
         <div class="texto">
             <p class="texto1 flex-wrap">Captá tus mejores momentos, tus mejores trabajos, tus mejores logros desde el aire. Inmortalizá ese momento especial con una buena imágen desde otra perspectiva.</p>
@@ -61,7 +61,7 @@
             <p class="flex-wrap">Como si fuera un pájaro, mi drone captará desde el aire lo que necesites, ya sea un evento deportivo, los avances de una obra, o lo que se te ocurra!</p>
         </div>
         <div class="video2 flex-wrap">
-            <iframe class="video1" width="100%" height="315" src="https://www.youtube.com/embed/rPuUZtiuw4E" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width="750px"></iframe>
+            <iframe class="video1" width="560" height="315" src="https://www.youtube.com/embed/KiuHgXzGJyg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="edicion-de-video">
             <h2>Edición de Video</h2>
