--- a/assets/pages/servicios.html
+++ b/assets/pages/servicios.html
@@ -44,33 +44,33 @@
         <p class="título__sección--descrip">A continuación se muestra una lista de los servicios que ofrezco. Contácteme si quiere saber más.</p>
     </div>      
 
-    <div class="contenedor__servicios container flex-wrap"> 
+    <div class="contenedor__servicios container"> 
         <div class="fotografía">
             <h2>Fotografías</h2>
         </div>
-        <div class="foto flex-wrap">
+        <div class="foto">
             <img class="img-sec img-fluid mi-clase" src="../images/puente.webp" alt="puenteroca" width="100%" height="auto">
         </div>
         <div class="texto">
-            <p class="texto1 flex-wrap">Captá tus mejores momentos, tus mejores trabajos, tus mejores logros desde el aire. Inmortalizá ese momento especial con una buena imágen desde otra perspectiva.</p>
+            <p>Captá tus mejores momentos, tus mejores trabajos, tus mejores logros desde el aire. Inmortalizá ese momento especial con una buena imágen desde otra perspectiva.</p>
         </div>
-        <div class="video flex-wrap">
+        <div class="video">
             <h2>Video</h2>
         </div>
-        <div class="texto2 flex-wrap">
-            <p class="flex-wrap">Como si fuera un pájaro, mi drone captará desde el aire lo que necesites, ya sea un evento deportivo, los avances de una obra, o lo que se te ocurra!</p>
+        <div class="texto2">
+            <p>Como si fuera un pájaro, mi drone captará desde el aire lo que necesites, ya sea un evento deportivo, los avances de una obra, o lo que se te ocurra!</p>
         </div>
-        <div class="video2 flex-wrap">
+        <div class="video2">
             <iframe class="video1" width="560" height="315" src="https://www.youtube.com/embed/KiuHgXzGJyg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="edicion-de-video">
             <h2>Edición de Video</h2>
         </div>
         <div class="video3">
-            <iframe class="video3 flex-wrap" width="100%" height="315" src="https://www.youtube.com/embed/rPuUZtiuw4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="video3" width="100%" height="315" src="https://www.youtube.com/embed/rPuUZtiuw4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="texto3 flex-wrap">
-            <p class="flex-wrap">Ya que llegaste hasta acá, te comento que puedo entregarte los videos en "crudo", o puedo ofrecerte el servicio de edición por un costo adicional. Podrás elegir la música y el tamaño del video para publicarlo en distintas redes sociales con la mejor calidad</p>
+        <div class="texto3">
+            <p>Ya que llegaste hasta acá, te comento que puedo entregarte los videos en "crudo", o puedo ofrecerte el servicio de edición por un costo adicional. Podrás elegir la música y el tamaño del video para publicarlo en distintas redes sociales con la mejor calidad</p>
         </div>
     </div> 
 
