optimización de servicios

--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -62,7 +62,7 @@
                                   
                     <label for="mensaje" class="colocar_mensaje">Mensaje<span class="obligatorio">*</span></label>                     
                     <textarea name="introducir_mensaje" class="texto_mensaje" id="mensaje" required="obligatorio" placeholder="Deja aquí tu comentario..."></textarea>                           
-                    <button type="submit" name="enviar_formulario" id="enviar">Enviar</button>
+                    <button class="button__submit" type="submit" name="enviar_formulario" id="enviar">Enviar</button>
                     <p class="aviso">
                         <span class="obligatorio"> * </span>los campos son obligatorios.
                     </p>          
