--- a/assets/pages/servicios.html
+++ b/assets/pages/servicios.html
@@ -61,13 +61,13 @@
             <p>Como si fuera un pájaro, mi drone captará desde el aire lo que necesites, ya sea un evento deportivo, los avances de una obra, o lo que se te ocurra!</p>
         </div>
         <div class="video2">
-            <iframe class="video1" width="560" height="315" src="https://www.youtube.com/embed/KiuHgXzGJyg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <video class="container" src="../videos/Mountains - 7418.mp4" controls width="100%"></video>
         </div>
         <div class="edicion-de-video">
             <h2>Edición de Video</h2>
         </div>
         <div class="video3">
-            <iframe class="video3" width="100%" height="315" src="https://www.youtube.com/embed/rPuUZtiuw4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <video src="../videos/Rising Upon The Lake - 20604.mp4" controls width="100%"></video>
         </div>
         <div class="texto3">
             <p>Ya que llegaste hasta acá, te comento que puedo entregarte los videos en "crudo", o puedo ofrecerte el servicio de edición por un costo adicional. Podrás elegir la música y el tamaño del video para publicarlo en distintas redes sociales con la mejor calidad</p>
