modificando el portfolio

--- a/assets/pages/portfolio.html
+++ b/assets/pages/portfolio.html
@@ -45,7 +45,38 @@
         <p class="título__sección--descrip">En esta galería puede ver una selección de mi trabajo. Espero que la disfrute.</p>
     </div>      
 
-    
+<div class="grid__portfolio container">
+    <div class="item1">
+      <img class="galería__img img1" src="../images/dji-g44a4adbcd_640.jpg" alt="" width="100%">
+      <h3></h3>
+    </div>
+    <div class="item2">
+      <video class="galería__video vid2" src="../videos/Mountains - 7418.mp4" controls width="100%"></video>
+    </div>
+    <div class="item3">
+      <img class="galería__img img3" src="../images/elmanzanar.webp" alt="" width="100%">
+    </div>
+    <div class="item4">
+      <video class="galería__video vid4" src="../videos/Rising Upon The Lake - 20604.mp4 " controls width="100%"></video>
+    </div>
+    <div class="item5">
+      <img class="galería__img img5" src="../images/puente.webp" alt="" width="100%">
+    </div>
+    <div class="item6">
+      <video class="galería__video vid6" src="../videos/Sunrise - 7127.mp4" controls width="100%"></video>
+    </div>
+    <div class="item7">
+      <img class="galería__img img7" src="../images/sunrise-g45842561f_640.jpg" alt="" width="100%">
+    </div>
+    <div class="item8">
+      <video class="galería__video vid8" src="../videos/Trafic - 53902.mp4" controls width="100%"></video>
+    </div>
+    <div class="item9">
+      <img class="galería__img img9" src="../images/droneinicio.webp" alt="" width="100%">
+    </div>
+
+
+</div>    
 
     <footer class="container__footer container">
         <section class="contenido__footer container flex-wrap">
