--- a/assets/pages/servicios.html
+++ b/assets/pages/servicios.html
@@ -49,7 +49,7 @@
             <h2>Fotografías</h2>
         </div>
         <div class="foto">
-            <img class="img-sec img-fluid mi-clase" src="../images/puente.webp" alt="puenteroca" width="100%" height="auto">
+            <img class="img-sec img-fluid mi-clase" src="../images/elmanzanar.webp" alt="puenteroca" width="100%" height="auto">
         </div>
         <div class="texto">
             <p>Captá tus mejores momentos, tus mejores trabajos, tus mejores logros desde el aire. Inmortalizá ese momento especial con una buena imágen desde otra perspectiva.</p>
