--- a/assets/pages/portfolio.html
+++ b/assets/pages/portfolio.html
@@ -15,10 +15,12 @@
     <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
+    <!-- Título -->
     <header class="container__header">
         <div class="container__header--secciones">
             <h1 class="container__header--título">Sebastián Pedranti<span class="container__header--título--span" >Drone Pilot</span></h1clas>
         </div>
+        <!-- Navbar -->
         <div class="navbar" >
             <ul class="menu">
                 <li class="menu__item">
@@ -39,45 +41,43 @@
             </ul> 
         </div>                                             
     </header>
-
+    <!-- Sección + descripción -->
     <div class="container__secciones container">
         <h2 class="título__sección">Portfolio</h2>
         <p class="título__sección--descrip">En esta galería puede ver una selección de mi trabajo. Espero que la disfrute.</p>
     </div>      
-
-<div class="grid__portfolio container">
-    <div class="item1">
-      <img class="galería__img img1" src="../images/dji-g44a4adbcd_640.jpg" alt="" width="100%">
-      <h3></h3>
-    </div>
-    <div class="item2">
-      <video class="galería__video vid2" src="../videos/Mountains - 7418.mp4" controls width="100%"></video>
-    </div>
-    <div class="item3">
-      <img class="galería__img img3" src="../images/elmanzanar.webp" alt="" width="100%">
-    </div>
-    <div class="item4">
-      <video class="galería__video vid4" src="../videos/Rising Upon The Lake - 20604.mp4 " controls width="100%"></video>
-    </div>
-    <div class="item5">
-      <img class="galería__img img5" src="../images/puente.webp" alt="" width="100%">
-    </div>
-    <div class="item6">
-      <video class="galería__video vid6" src="../videos/Sunrise - 7127.mp4" controls width="100%"></video>
-    </div>
-    <div class="item7">
-      <img class="galería__img img7" src="../images/sunrise-g45842561f_640.jpg" alt="" width="100%">
-    </div>
-    <div class="item8">
-      <video class="galería__video vid8" src="../videos/Trafic - 53902.mp4" controls width="100%"></video>
-    </div>
-    <div class="item9">
-      <img class="galería__img img9" src="../images/droneinicio.webp" alt="" width="100%">
-    </div>
-
-
-</div>    
-
+    <!-- Galería de fotos y videos mezclados. Fuente: Unsplash. Pedir originales a Seba para resubir -->
+    <div class="grid__portfolio container">
+        <div class="item1">
+            <img class="galería__img img1" src="../images/dji-g44a4adbcd_640.jpg" alt="Drone DJI Mavic Mini" width="100%">
+            <h3></h3>
+        </div>
+        <div class="item2">
+            <video class="galería__video vid2" src="../videos/Mountains - 7418.mp4" controls width="100%" alt="Montañas nevadas"></video>
+        </div>
+        <div class="item3">
+            <img class="galería__img img3" src="../images/elmanzanar.webp" alt="Casa El Manzanar" width="100%">
+        </div>
+        <div class="item4">
+            <video class="galería__video vid4" src="../videos/Rising Upon The Lake - 20604.mp4 " controls width="100%" alt="Lago"></video>
+        </div>
+        <div class="item5">
+            <img class="galería__img img5" src="../images/puente.webp" alt="Puente de General Roca" width="100%">
+        </div>
+        <div class="item6">
+            <video class="galería__video vid6" src="../videos/Sunrise - 7127.mp4" controls width="100%" alt="Atardecer"></video>
+        </div>
+        <div class="item7">
+            <img class="galería__img img7" src="../images/sunrise-g45842561f_640.jpg" alt="Atardecer" width="100%">
+        </div>
+        <div class="item8">
+            <video class="galería__video vid8" src="../videos/Trafic - 53902.mp4" controls width="100%" alt="trafico en la ciudad"></video>
+        </div>
+        <div class="item9">
+            <img class="galería__img img9" src="../images/droneinicio.webp" alt="Control del Drone en la mano" width="100%">
+        </div>
+    </div>    
+    <!-- Footer -->
     <footer class="container__footer container">
         <section class="contenido__footer container flex-wrap">
             <ul class="contenido__footer--lista container flex-wrap">
