--- a/assets/pages/servicios.html
+++ b/assets/pages/servicios.html
@@ -14,10 +14,12 @@
     <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
+    <!-- Título -->
     <header class="container__header">
         <div class="container__header--secciones">
             <h1 class="container__header--título">Sebastián Pedranti<span class="container__header--título--span" >Drone Pilot</span></h1clas>
         </div>
+        <!-- Navbar -->
         <div class="navbar" >
             <ul class="menu">
                 <li class="menu__item">
@@ -38,42 +40,45 @@
             </ul> 
         </div>                                             
     </header>
-
+    <!-- Sección + descripción -->
     <div class="container__secciones container">
         <h2 class="título__sección">Servicios</h2>
         <p class="título__sección--descrip">A continuación se muestra una lista de los servicios que ofrezco. Contácteme si quiere saber más.</p>
     </div>      
-
+    <!-- Servicios ofrecidos -->
     <div class="contenedor__servicios container"> 
+        <!-- Fotografía -->
         <div class="fotografía">
             <h2>Fotografías</h2>
         </div>
         <div class="foto">
-            <img class="img-sec img-fluid mi-clase" src="../images/elmanzanar.webp" alt="puenteroca" width="100%" height="auto">
+            <img class="img-sec img-fluid mi-clase" src="../images/elmanzanar.webp" alt="Casa El Manzanar, parquización" width="100%" height="auto">
         </div>
         <div class="texto">
-            <p>Captá tus mejores momentos, tus mejores trabajos, tus mejores logros desde el aire. Inmortalizá ese momento especial con una buena imágen desde otra perspectiva.</p>
+            <p>Captá tus mejores momentos, tus mejores trabajos, tus mejores logros desde el aire. Inmortalizá ese momento especial con una buena toma desde otra perspectiva.</p>
         </div>
+        <!-- Video -->
         <div class="video">
             <h2>Video</h2>
         </div>
         <div class="texto2">
-            <p>Como si fuera un pájaro, mi drone captará desde el aire lo que necesites, ya sea un evento deportivo, los avances de una obra, o lo que se te ocurra!</p>
+            <p>Como si fuera un pájaro, mi drone captará desde el aire lo que necesites, ya sea un evento deportivo, los avances de una obra, o lo que sea que quieras dejar registrado!</p>
         </div>
         <div class="video2">
-            <video class="container" src="../videos/Mountains - 7418.mp4" controls width="100%"></video>
+            <video class="container" src="../videos/Mountains - 7418.mp4" controls width="100%" alt="Montañas nevadas"></video> <!-- Videos de Unsplash, pedir originales a Seba -->
         </div>
+        <!-- Edición de video -->
         <div class="edicion-de-video">
             <h2>Edición de Video</h2>
         </div>
         <div class="video3">
-            <video src="../videos/Rising Upon The Lake - 20604.mp4" controls width="100%"></video>
+            <video src="../videos/Rising Upon The Lake - 20604.mp4" controls width="100%" alt="Lago"></video> <!-- Videos de Unsplash, pedir originales a Seba -->
         </div>
         <div class="texto3">
-            <p>Ya que llegaste hasta acá, te comento que puedo entregarte los videos en "crudo", o puedo ofrecerte el servicio de edición por un costo adicional. Podrás elegir la música y el tamaño del video para publicarlo en distintas redes sociales con la mejor calidad</p>
+            <p>Ya que llegaste hasta acá, te comento que puedo entregarte los videos en "crudo", o puedo ofrecerte el servicio de edición por un costo adicional. Podrás elegir la música y el tamaño del video para publicarlo en distintas redes sociales con la mejor calidad.</p>
         </div>
     </div> 
-
+    <!-- Footer -->
     <footer class="container__footer container">
         <section class="contenido__footer container flex-wrap">
             <ul class="contenido__footer--lista container flex-wrap">
