--- a/assets/pages/sobremi.html
+++ b/assets/pages/sobremi.html
@@ -15,11 +15,13 @@
     <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
+    <!-- Título -->
     <header class="container__header container">
         <div class="container__header--secciones container">
             <h1 class="container__header--título">Sebastián Pedranti
                 <span class="container__header--título--span">Drone Pilot</span></h1clas>
         </div>
+        <!-- Navbar -->
         <div class="navbar" >
             <ul class="menu">
                 <li class="menu__item">
@@ -40,18 +42,19 @@
             </ul> 
         </div>                                             
     </header>
-
+    <!-- Sección + descripción -->
     <div class="container__secciones container">
         <h2 class="título__sección--sm">Sobre Mí</h2>
         <p class="título__sección--descrip flex-row">Hola! soy Seba, y quiero contarte un poco sobre mí. Me gusta hacer deportes, andar en moto y editar videos. 
             Descubrí esta pasión gracias a un amigo que me prestó su drone aun sabiendo que jamás había volado uno (mucha confianza!) y lo compré inmediatamente. Empezó como hobbie pero se convirtió en un estilo de vida.</p>
     </div>
+    <!-- img de sección -->
     <div class="container">
         <picture class="foto__sección container">
             <img class="foto__sección__sobremí container" src="../images/sebaseccionsobremi.webp" alt="Foto de Seba Pedranti" width="1500px" height="1500px">
         </picture>      
     </div>  
-
+    <!-- Footer -->
     <footer class="container__footer container">
         <section class="contenido__footer container flex-wrap">
             <ul class="contenido__footer--lista container flex-wrap">
