--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+    <!-- Logo y título -->
     <header class="container__header container">
         <div class="container__header--index container">
             <picture class="container__header--img">
@@ -21,6 +22,7 @@
             </picture>
             <h1 class="container__header--título" >Sebastián Pedranti<span class="container__header--título--span" >Drone Pilot</span></h1clas>
         </div>
+        <!-- Navbar -->
         <div class="navbar container" >
             <ul class="menu">
                 <li class="menu__item">
@@ -41,12 +43,13 @@
             </ul> 
         </div>                                             
     </header>
+    <!-- Foto de inicio -->
     <div class="container">
         <picture class="container">
             <img class="picture__index container" src="./assets/images/droneinicio.webp" alt="Drone de inicio" width="100%" >
         </picture>                                                                                
     </div>  
-
+    <!-- Footer -->
     <footer class="container__footer container">
         <section class="contenido__footer container flex-wrap">
             <ul class="contenido__footer--lista container flex-wrap">
@@ -76,6 +79,5 @@
             </div>
         </section>
     </footer>    
-
 </body>
 </html>
