--- a/assets/pages/servicios.html
+++ b/assets/pages/servicios.html
@@ -43,7 +43,7 @@
     <!-- Sección + descripción -->
     <div class="container__secciones container">
         <h2 class="título__sección">Servicios</h2>
-        <p class="título__sección--descrip">A continuación se muestra una lista de los servicios que ofrezco. Contácteme si quiere saber más.</p>
+        <p class="título__sección--descrip">A continuación te muestro una lista de los servicios que ofrezco. Contáctame si quieres saber más.</p>
     </div>      
     <!-- Servicios ofrecidos -->
     <div class="contenedor__servicios container"> 
@@ -52,7 +52,7 @@
             <h2>Fotografías</h2>
         </div>
         <div class="foto">
-            <img class="img-sec img-fluid mi-clase" src="../images/elmanzanar.webp" alt="Casa El Manzanar, parquización" width="100%" height="auto">
+            <img class="img-sec" src="../images/elmanzanar.webp" alt="Casa El Manzanar, parquización" width="100%" height="auto">
         </div>
         <div class="texto">
             <p>Captá tus mejores momentos, tus mejores trabajos, tus mejores logros desde el aire. Inmortalizá ese momento especial con una buena toma desde otra perspectiva.</p>
@@ -62,7 +62,7 @@
             <h2>Video</h2>
         </div>
         <div class="texto2">
-            <p>Como si fuera un pájaro, mi drone captará desde el aire lo que necesites, ya sea un evento deportivo, los avances de una obra, o lo que sea que quieras dejar registrado!</p>
+            <p>Como si fuera un pájaro, mi drone captará desde el aire lo que necesites: un evento deportivo, los avances de una obra, un paseo en la ciudad o lo que sea que quieras dejar registrado!</p>
         </div>
         <div class="video2">
             <video class="container" src="../videos/Mountains - 7418.mp4" controls width="100%" alt="Montañas nevadas"></video> <!-- Videos de Unsplash, pedir originales a Seba -->
@@ -89,25 +89,21 @@
             <div class="contenido__footer--iconosredes flex-wrap flex-row">
                 <a class="iconos" href="https://www.facebook.com/sebastian.pedranti" target="_blank"><svg  class="iconos__link" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#971717" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                    <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
-                  </svg>
+                    <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" /></svg>
                 </a>
                 <a class="iconos" href="https://www.instagram.com/dronesp2021" target="_blank"><svg class="iconos__link" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#971717" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <rect x="4" y="4" width="16" height="16" rx="4" />
                     <circle cx="12" cy="12" r="3" />
-                    <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
-                    </svg>
+                    <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" /></svg>
                 </a>
                 <a class="iconos" href="https://www.youtube.com/channel/UCnB8bhVRKFxAGZMEIa0gVhw"target="_blank"><svg class="iconos__link" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-youtube" width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#971717" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <rect x="3" y="5" width="18" height="14" rx="4" />
-                    <path d="M10 9l5 3l-5 3z" />
-                    </svg>
+                    <path d="M10 9l5 3l-5 3z" /></svg>
                 </a>
             </div>
         </section>
     </footer>    
-
 </body>
 </html>
