--- a/assets/pages/portfolio.html
+++ b/assets/pages/portfolio.html
@@ -44,37 +44,36 @@
     <!-- Sección + descripción -->
     <div class="container__secciones container">
         <h2 class="título__sección">Portfolio</h2>
-        <p class="título__sección--descrip">En esta galería puede ver una selección de mi trabajo. Espero que la disfrute.</p>
+        <p class="título__sección--descrip">En esta galería podés ver una selección de mi trabajo. Espero que la disfrutes.</p>
     </div>      
-    <!-- Galería de fotos y videos mezclados. Fuente: Unsplash. Pedir originales a Seba para resubir -->
+    <!-- Galería de fotos y videos mezclados. Fuente: Unsplash. Pedir originales a Seba para volver a subir -->
     <div class="grid__portfolio container">
-        <div class="item1">
-            <img class="galería__img img1" src="../images/dji-g44a4adbcd_640.jpg" alt="Drone DJI Mavic Mini" width="100%">
-            <h3></h3>
+        <div class="item">
+            <img class="item__galería__img--img1" src="../images/dji-g44a4adbcd_640.jpg" alt="Drone DJI Mavic Mini" width="100%" height="100%">
         </div>
-        <div class="item2">
-            <video class="galería__video vid2" src="../videos/Mountains - 7418.mp4" controls width="100%" alt="Montañas nevadas"></video>
+        <div class="item">
+            <video class="item__galería__video--vid2" src="../videos/Mountains - 7418.mp4" controls width="100%" height="100%" alt="Montañas nevadas"></video>
         </div>
-        <div class="item3">
-            <img class="galería__img img3" src="../images/elmanzanar.webp" alt="Casa El Manzanar" width="100%">
+        <div class="item">
+            <img class="item__galería__img--img3" src="../images/elmanzanar.webp" alt="Casa El Manzanar" width="100%" height="100%">
         </div>
-        <div class="item4">
-            <video class="galería__video vid4" src="../videos/Rising Upon The Lake - 20604.mp4 " controls width="100%" alt="Lago"></video>
+        <div class="item">
+            <video class="item__galería__video--vid4" src="../videos/Rising Upon The Lake - 20604.mp4 " controls width="100%" height="100%" alt="Lago"></video>
         </div>
-        <div class="item5">
-            <img class="galería__img img5" src="../images/puente.webp" alt="Puente de General Roca" width="100%">
+        <div class="item">
+            <img class="item__galería__img--img5" src="../images/puente.webp" alt="Puente de General Roca" width="100%" height="100%">
         </div>
-        <div class="item6">
-            <video class="galería__video vid6" src="../videos/Sunrise - 7127.mp4" controls width="100%" alt="Atardecer"></video>
+        <div class="item">
+            <video class="item__galería__video--vid6" src="../videos/Sunrise - 7127.mp4" controls width="100%" height="100%" alt="Atardecer"></video>
         </div>
-        <div class="item7">
-            <img class="galería__img img7" src="../images/sunrise-g45842561f_640.jpg" alt="Atardecer" width="100%">
+        <div class="item">
+            <img class="item__galería__img--img7" src="../images/sunrise-g45842561f_640.jpg" alt="Atardecer" width="100%" height="100%">
         </div>
-        <div class="item8">
-            <video class="galería__video vid8" src="../videos/Trafic - 53902.mp4" controls width="100%" alt="trafico en la ciudad"></video>
+        <div class="item">
+            <video class="item__galería__video--vid8" src="../videos/Trafic - 53902.mp4" controls width="100%" height="100%" alt="trafico en la ciudad"></video>
         </div>
-        <div class="item9">
-            <img class="galería__img img9" src="../images/droneinicio.webp" alt="Control del Drone en la mano" width="100%">
+        <div class="item">
+            <img class="item__galería__img--img9" src="../images/droneinicio.webp" alt="Control del Drone en la mano" width="100%" height="100%">
         </div>
     </div>    
     <!-- Footer -->
