--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <picture class="container__header--img">
                 <img class="container_header--img" src="./assets/images/Diseño sin título.webp" alt="logo" width="100px" height="100px">
             </picture>
-            <h1 class="container__header--título" >Sebastián Pedranti<span class="container__header--título--span" >Drone Pilot</span></h1clas>
+            <h1 class="container__header--título" >Sebastián Pedranti<span class="container__header--título--span" >Drone Pilot</span></h1>
         </div>
         <!-- Navbar -->
         <div class="navbar container" >
