--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="container__header container">
         <div class="container__header--index container">
             <picture class="container__header--img">
-                <img class="container_header--img" src="./assets/images/Diseño sin título.webp" alt="logo" width="100px" height="100px">
+                <img src="./assets/images/Diseño sin título.webp" alt="logo" width="100px" height="100px">
             </picture>
             <h1 class="container__header--título" >Sebastián Pedranti<span class="container__header--título--span" >Drone Pilot</span></h1>
         </div>
